--- a/.env
+++ b/.env
@@ -4,13 +4,18 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+
 # URL
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXTAUTH_MAX_AGE_TOKEN=604800
 NEXTAUTH_SECRET=joincode
 NEXTAUTH_URL=http://localhost:3000
+
 # localhost database
 DATABASE_URL=postgresql://postgres:123@localhost:5433/join-code?schema=public
+
+# RESEND
+RESEND_API_KEY=re_4cSVd2en_NZMJSYXe8JoXzm78wTAjR81L
 
 # supabase database
 # DATABASE_URL="postgres://postgres.atzxitftejquqppfauyh:u5V0Pdrq0g693WaL@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
