--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && prisma generate",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.0",
+    "@auth/prisma-adapter": "^1.6.0",
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
