--- a/.env
+++ b/.env
@@ -9,12 +9,13 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXTAUTH_MAX_AGE_TOKEN=604800
 NEXTAUTH_SECRET=joincode
+NEXTAUTH_URL=http://localhost:3000
 
 # RESEND
 RESEND_API_KEY=re_4cSVd2en_NZMJSYXe8JoXzm78wTAjR81L
 RESEND_FROM_EMAIL=Admin Join Code <admin@joincode.site>
 
 # supabase database
-DATABASE_URL=postgres://postgres.atzxitftejquqppfauyh:u5V0Pdrq0g693WaL@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+# DATABASE_URL=postgres://postgres.atzxitftejquqppfauyh:u5V0Pdrq0g693WaL@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 # localhost database
-# DATABASE_URL=postgresql://postgres:123@localhost:5433/join-code?schema=public
+DATABASE_URL=postgresql://postgres:123@localhost:5433/join-code?schema=public
