--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
 
 # vercel
 .vercel
@@ -38,3 +38,4 @@ next-env.d.ts
 /public/documents
 /public/images/badges
 /public/images/proofOfPayments
+/public/images/avatars
