--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@prisma/client": "^5.12.1",
+    "@supabase/supabase-js": "^2.42.5",
     "axios": "^1.6.8",
+    "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "formidable": "^3.5.1",
     "fs-extra": "^11.2.0",
     "lucide-react": "^0.358.0",
